fix: Update author email in composer.json

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "authors": [
         {
             "name": "Technobase",
-            "email": "dev@technobase.com"
+            "email": "dev@technobase.krd"
         }
     ],
   "require": {
