--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -3,9 +3,9 @@ name: PHPStan
 on:
   push:
     paths:
-      - '**.php'
-      - 'phpstan.neon.dist'
-      - '.github/workflows/phpstan.yml'
+      - "**.php"
+      - "phpstan.neon.dist"
+      - ".github/workflows/phpstan.yml"
 
 jobs:
   phpstan:
@@ -18,11 +18,11 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.4'
+          php-version: "8.4"
           coverage: none
 
-      - name: Install composer dependencies
-        uses: ramsey/composer-install@v3
+      - name: Install composer dependencies (including dev)
+        run: composer install --no-interaction --prefer-dist --with-all-dependencies
 
       - name: Run PHPStan
         run: ./vendor/bin/phpstan --error-format=github --memory-limit=512M
